[package]
name = "consul_kv_config"
version = "0.2.0"
edition = "2021"
authors = ["theirix <theirix@gmail.com>"]
repository = "https://github.com/theirix/consul-kv-config"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2.14"
# wait for PR68 to be merged
consul = { git = "https://github.com/theirix/consul-rust", branch="kv-put-quotes" }
env_logger = { version = "0.9.1", features = ["atty"] }
log = "0.4.17"
structopt = { version = "0.3.26", features = ["color"] }
thiserror = "1.0.37"
strfmt = "0.2.2"
regex = "1.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
